[package]
name = "speedy-md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
pulldown-cmark = "0.9.1"
threadpool = "1.8.1"
concat-string = "1.0.1"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
ci_info = "0.14.4"